--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.3",
     "echarts": "^4.5.0",
     "element-ui": "^2.13.0",
+    "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
