--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "element-ui": "^2.13.0",
     "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
+    "socket.io-client": "^2.3.0",
+    "v-distpicker": "^1.2.2",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3",
