--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.3",
     "echarts": "^4.5.0",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
     "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
     "socket.io-client": "^2.3.0",
@@ -19,7 +20,8 @@
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
