--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.2",
     "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
+    "postcss-px2rem": "^0.3.0",
     "socket.io-client": "^2.3.0",
     "v-distpicker": "^1.2.2",
     "vue": "^2.6.10",
