--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "dayjs": "^1.8.23",
     "echarts": "^4.5.0",
     "element-ui": "^2.13.0",
     "file-saver": "^2.0.2",
@@ -19,6 +20,7 @@
     "socket.io-client": "^2.3.0",
     "v-distpicker": "^1.2.2",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
