--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.2",
     "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "postcss-px2rem": "^0.3.0",
     "socket.io-client": "^2.3.0",
     "v-distpicker": "^1.2.2",
@@ -34,6 +35,7 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
